# usgm-python-sdk

./: README.md  environment.py  pyproject.toml  reference.md
.fern/: metadata.json
account/: raw_client.py
addresses/: raw_client.py
addresses/types/: update_address_dto_type.py
bank_accounts/: client.py
errors/: conflict_error.py  internal_server_error.py  not_found_error.py  too_many_requests_error.py  unauthorized_error.py  unprocessable_entity_error.py
folders/: raw_client.py
mails/: __init__.py
mails/types/: mails_list_request_is_read.py  mails_list_request_mail_type_item.py  mails_list_request_scan_status_item.py  mails_list_request_status_item.py
sandbox/: __init__.py
sandbox/types/: __init__.py  seed_sandbox_mail_dto_mail_type.py  seed_sandbox_mail_dto_measurement.py
scans/: __init__.py  raw_client.py
scans/types/: create_scan_dto_type.py  scans_list_request_sort.py
shipments/types/: shipments_list_request_status_item.py  (+1 more)
types/: account_dto.py  address_dto.py  address_page_dto.py  address_page_dto_data_item.py  bank_account_page_dto.py  bank_account_page_dto_data_item.py  folder_list_dto.py  mail_detail_dto_folder.py  mail_page_dto_data_item.py  mail_page_dto_data_item_scan.py  problem_details_dto_errors_item.py  scan_page_dto_data_item.py  seed_result_dto.py  shipment_detail_dto_mail_items_item.py  shipment_detail_dto_type.py  shipment_page_dto.py  shipment_page_dto_data_item.py  shipment_page_dto_data_item_destination.py  shipment_page_dto_data_item_type.py
usgm/: __init__.py  client.py  environment.py  reference.md
(+54 files in other folders)
